--- a/tw_promotion.ipynb
+++ b/tw_promotion.ipynb
@@ -14,6 +14,49 @@
       "/Users/gsokolov/anaconda3/lib/python3.11/site-packages/google/auth/_default.py:76: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. See the following page for troubleshooting: https://cloud.google.com/docs/authentication/adc-troubleshooting/user-creds. \n",
       "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n"
      ]
+    }
+   ],
+   "source": [
+    "# Import necessary libraries\n",
+    "from google.cloud import bigquery\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Initialize a BigQuery client\n",
+    "client = bigquery.Client()\n",
+    "\n",
+    "# Define your SQL query\n",
+    "query = \"\"\"\n",
+    "    SELECT *\n",
+    "    FROM `dev_gsokolov.otr_counts`\n",
+    "\"\"\"\n",
+    "\n",
+    "# Execute the query and convert the result to a pandas DataFrame\n",
+    "df = client.query(query).to_dataframe()\n",
+    "\n",
+    "# save df to csv\n",
+    "df.to_csv('otr_counts.csv', index=False)\n",
+    "# cut values of total_trading_count into predefined bins\n",
+    "bins = [0,100,250,500,750,1000,1500,2000,3000,4000,5000]\n",
+    "labels = ['0-100','100-250','250-500','500-750','750-1000','1000-1500','1500-2000','2000-3000','3000-4000','4000-5000']\n",
+    "df['total_trading_count_binned'] = pd.cut(df['total_trading_count'], bins=bins, labels=labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/n0/lll36rgn2xdcdg6twr3671vmm2ffcc/T/ipykernel_63774/265316934.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  filtered_df['reading_count_bin'] = pd.cut(filtered_df['total_reading_count'], bins=bin_edges, labels=bin_labels, right=False, include_lowest=True)\n"
+     ]
     },
     {
      "data": {
@@ -37,85 +80,427 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>user_id</th>\n",
+       "      <th>account_id</th>\n",
        "      <th>deal_count</th>\n",
+       "      <th>total_reading_count</th>\n",
+       "      <th>reading_count_bin</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>16798787</td>\n",
-       "      <td>106927</td>\n",
+       "      <td>40092914</td>\n",
+       "      <td>101134895</td>\n",
+       "      <td>156</td>\n",
+       "      <td>26</td>\n",
+       "      <td>20-50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>12306957</td>\n",
-       "      <td>47717</td>\n",
+       "      <td>13054545</td>\n",
+       "      <td>121291660</td>\n",
+       "      <td>311</td>\n",
+       "      <td>33</td>\n",
+       "      <td>20-50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>909086</td>\n",
-       "      <td>21773</td>\n",
+       "      <td>564873</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>10-20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>35716982</td>\n",
-       "      <td>13252</td>\n",
+       "      <td>7990330</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>20-50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>25163307</td>\n",
-       "      <td>12166</td>\n",
+       "      <td>9858381</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>20-50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>78169</th>\n",
-       "      <td>22690424</td>\n",
-       "      <td>1</td>\n",
+       "      <th>171588</th>\n",
+       "      <td>6942831</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>10-20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>78170</th>\n",
-       "      <td>18831466</td>\n",
-       "      <td>1</td>\n",
+       "      <th>171589</th>\n",
+       "      <td>34081549</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>10-20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>78171</th>\n",
-       "      <td>10455219</td>\n",
-       "      <td>1</td>\n",
+       "      <th>171590</th>\n",
+       "      <td>31547929</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>10-20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>78172</th>\n",
-       "      <td>25987599</td>\n",
-       "      <td>1</td>\n",
+       "      <th>171591</th>\n",
+       "      <td>33313478</td>\n",
+       "      <td>121191739</td>\n",
+       "      <td>4</td>\n",
+       "      <td>16</td>\n",
+       "      <td>10-20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>78173</th>\n",
-       "      <td>34137391</td>\n",
-       "      <td>1</td>\n",
+       "      <th>171592</th>\n",
+       "      <td>39503961</td>\n",
+       "      <td>141858327</td>\n",
+       "      <td>108</td>\n",
+       "      <td>16</td>\n",
+       "      <td>10-20</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>78174 rows × 2 columns</p>\n",
+       "<p>65141 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        user_id  deal_count\n",
-       "0      16798787      106927\n",
-       "1      12306957       47717\n",
-       "2        909086       21773\n",
-       "3      35716982       13252\n",
-       "4      25163307       12166\n",
-       "...         ...         ...\n",
-       "78169  22690424           1\n",
-       "78170  18831466           1\n",
-       "78171  10455219           1\n",
-       "78172  25987599           1\n",
-       "78173  34137391           1\n",
+       "         user_id  account_id  deal_count  total_reading_count  \\\n",
+       "0       40092914   101134895         156                   26   \n",
+       "1       13054545   121291660         311                   33   \n",
+       "2         564873        <NA>           0                   19   \n",
+       "3        7990330        <NA>           0                   21   \n",
+       "4        9858381        <NA>           0                   30   \n",
+       "...          ...         ...         ...                  ...   \n",
+       "171588   6942831        <NA>           0                   16   \n",
+       "171589  34081549        <NA>           0                   16   \n",
+       "171590  31547929        <NA>           0                   16   \n",
+       "171591  33313478   121191739           4                   16   \n",
+       "171592  39503961   141858327         108                   16   \n",
        "\n",
-       "[78174 rows x 2 columns]"
+       "       reading_count_bin  \n",
+       "0                  20-50  \n",
+       "1                  20-50  \n",
+       "2                  10-20  \n",
+       "3                  20-50  \n",
+       "4                  20-50  \n",
+       "...                  ...  \n",
+       "171588             10-20  \n",
+       "171589             10-20  \n",
+       "171590             10-20  \n",
+       "171591             10-20  \n",
+       "171592             10-20  \n",
+       "\n",
+       "[65141 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_df = df[(df['total_reading_count'] < 1000) & (df['total_reading_count'] != 0)]\n",
+    "\n",
+    "# Define bin edges\n",
+    "bin_edges = [0, 1, 2, 3, 4, 5, 6, 10, 20, 50, 100, filtered_df['total_reading_count'].max() + 1]\n",
+    "\n",
+    "# Define bin labels\n",
+    "bin_labels = ['0-1', '1-2', '2-3', '3-4', '4-5', '5-6', '6-10', '10-20', '20-50', '50-100', '100+']\n",
+    "\n",
+    "# Assign bins to the total_reading_count column\n",
+    "filtered_df['reading_count_bin'] = pd.cut(filtered_df['total_reading_count'], bins=bin_edges, labels=bin_labels, right=False, include_lowest=True)\n",
+    "\n",
+    "filtered_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>account_id</th>\n",
+       "      <th>deal_count</th>\n",
+       "      <th>total_reading_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40092914</td>\n",
+       "      <td>101134895</td>\n",
+       "      <td>156</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13054545</td>\n",
+       "      <td>121291660</td>\n",
+       "      <td>311</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5775527</td>\n",
+       "      <td>101154296</td>\n",
+       "      <td>62</td>\n",
+       "      <td>854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>17813330</td>\n",
+       "      <td>100877125</td>\n",
+       "      <td>351</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>17813330</td>\n",
+       "      <td>100877124</td>\n",
+       "      <td>28</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171578</th>\n",
+       "      <td>36950141</td>\n",
+       "      <td>140964313</td>\n",
+       "      <td>164</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171580</th>\n",
+       "      <td>40267373</td>\n",
+       "      <td>122348315</td>\n",
+       "      <td>26</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171583</th>\n",
+       "      <td>38778472</td>\n",
+       "      <td>121763466</td>\n",
+       "      <td>136</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171586</th>\n",
+       "      <td>40090520</td>\n",
+       "      <td>122283503</td>\n",
+       "      <td>300</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171592</th>\n",
+       "      <td>39503961</td>\n",
+       "      <td>141858327</td>\n",
+       "      <td>108</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>35198 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         user_id  account_id  deal_count  total_reading_count\n",
+       "0       40092914   101134895         156                   26\n",
+       "1       13054545   121291660         311                   33\n",
+       "5        5775527   101154296          62                  854\n",
+       "11      17813330   100877125         351                   97\n",
+       "12      17813330   100877124          28                   97\n",
+       "...          ...         ...         ...                  ...\n",
+       "171578  36950141   140964313         164                   16\n",
+       "171580  40267373   122348315          26                   16\n",
+       "171583  38778472   121763466         136                   16\n",
+       "171586  40090520   122283503         300                   16\n",
+       "171592  39503961   141858327         108                   16\n",
+       "\n",
+       "[35198 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['deal_count']>11]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>account_id</th>\n",
+       "      <th>deal_count</th>\n",
+       "      <th>total_reading_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5775527</td>\n",
+       "      <td>101154296</td>\n",
+       "      <td>62</td>\n",
+       "      <td>854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>17813330</td>\n",
+       "      <td>100877124</td>\n",
+       "      <td>28</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>13944665</td>\n",
+       "      <td>100742044</td>\n",
+       "      <td>78</td>\n",
+       "      <td>478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>40248703</td>\n",
+       "      <td>101183843</td>\n",
+       "      <td>38</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>39347883</td>\n",
+       "      <td>141803796</td>\n",
+       "      <td>52</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171569</th>\n",
+       "      <td>12488677</td>\n",
+       "      <td>121234912</td>\n",
+       "      <td>8</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171571</th>\n",
+       "      <td>4035355</td>\n",
+       "      <td>120820955</td>\n",
+       "      <td>12</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171576</th>\n",
+       "      <td>22157491</td>\n",
+       "      <td>101152451</td>\n",
+       "      <td>28</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171580</th>\n",
+       "      <td>40267373</td>\n",
+       "      <td>122348315</td>\n",
+       "      <td>26</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171591</th>\n",
+       "      <td>33313478</td>\n",
+       "      <td>121191739</td>\n",
+       "      <td>4</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>26847 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         user_id  account_id  deal_count  total_reading_count\n",
+       "5        5775527   101154296          62                  854\n",
+       "12      17813330   100877124          28                   97\n",
+       "16      13944665   100742044          78                  478\n",
+       "17      40248703   101183843          38                   63\n",
+       "20      39347883   141803796          52                   51\n",
+       "...          ...         ...         ...                  ...\n",
+       "171569  12488677   121234912           8                   16\n",
+       "171571   4035355   120820955          12                   16\n",
+       "171576  22157491   101152451          28                   16\n",
+       "171580  40267373   122348315          26                   16\n",
+       "171591  33313478   121191739           4                   16\n",
+       "\n",
+       "[26847 rows x 4 columns]"
       ]
      },
      "metadata": {},
@@ -123,24 +508,12 @@
     }
    ],
    "source": [
-    "# Import necessary libraries\n",
-    "from google.cloud import bigquery\n",
-    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Initialize a BigQuery client\n",
-    "client = bigquery.Client()\n",
-    "\n",
-    "# Define your SQL query\n",
-    "query = \"\"\"\n",
-    "    SELECT *\n",
-    "    FROM `dev_gsokolov.deal_cnt_tw`\n",
-    "\"\"\"\n",
-    "\n",
-    "# Execute the query and convert the result to a pandas DataFrame\n",
-    "df = client.query(query).to_dataframe()\n",
-    "\n",
-    "# Display the DataFrame\n",
-    "display(df)"
+    "# Assuming `df` is your DataFrame and it contains a column named `total_reading_count`\n",
+    "# Filter the DataFrame to include only rows where `total_reading_count` is less than 1000\n",
+    "filtered_df = df[(df['deal_count'] < 100) & (df['deal_count'] != 0)]\n",
+    "display(filtered_df)"
    ]
   },
   {
