--- a/segments.ipynb
+++ b/segments.ipynb
@@ -1068,7 +1068,17 @@
     "print(f\"Training set proportion of class 1: {train_proportion}\")\n",
     "print(f\"Test set proportion of class 1: {test_proportion}\")\n",
     "\n",
-    "# The proportions should be similar, indicating that stratified sampling was successful"
+    "# The proportions should be similar, indicating that stratified sampling was successful\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find names of columns of dataframe df\n",
+    "df.columns"
    ]
   }
  ],
